<resources>

    <string name="app_name">生活工具箱</string>
    <string name="ready_exit">再次点击退出应用</string>

    <string name="response_error">数据返回异常</string>
    <string name="net_failure">网络错误，请检查网络连接</string>
    <string name="ensure">确定</string>

    <string name="live">直播</string>

    <string name="ip">IP查询</string>
    <string name="today_history">历史上今天</string>
    <string name="today_in_history">历史上的今天</string>
    <string name="news">新闻</string>
    <string name="wx_carefully_chosen">微信精选</string>
    <string name="qa_robot">问答机器人</string>
    <string name="exchange_rate">汇率</string>
    <string name="weather_forecast">天气预报</string>
    <string name="mobile_number_attr">手机号查询</string>
    <string name="id_inquiry">身份证查询</string>
    <string name="qq_num_query">QQ号测吉凶</string>
    <string name="qq_number_query">QQ号码测吉凶</string>
    <string name="jokes_collection">笑话大全</string>
    <string name="films_box_office">电影票房</string>
    <string name="top_news">新闻头条</string>
    <string name="tv_list_table">电视节目表</string>
    <string name="mobile_info">本机信息</string>
    <string name="font_convert">字体转换</string>
    <string name="baidu_weight">百度权重</string>
    <string name="website_security">网站安全查询</string>

    <string name="baidu_weight_query">百度权重查询</string>
    <string name="baidu_weight_result">百度权重：%1$s</string>
    <string name="baidu_weight_range_result">权重范围：%1$s &#8212; %2$s</string>
    <string name="baidu_weight_result_item">权重等级：%1$s</string>
    <string name="baidu_weight_range_result_item">%1$s &#8212; %2$s</string>
    <string name="about_baidu_weight">关于百度权重</string>
    <string name="font_convert_title">简/繁/火星字体转换</string>

    <string name="area_code_string">区号： %1$s</string>
    <string name="zip_string">邮编： %1$s</string>
    <string name="date_format_string">%1$d年%2$d月%3$d日</string>

    <string name="input_ip_or_domain">请输入ip地址或域名</string>
    <string name="input_id_number_hint">请输入身份证号</string>
    <string name="input_website_for_weight">请输入要查询的网址</string>
    <string name="input_phone_number_hint">请输入手机号码</string>
    <string name="input_qq_number_hint">请输入QQ号码</string>

    <string name="movie_ranking_cn_title">内地电影票房榜</string>
    <string name="movie_ranking_us_title">北美电影票房榜</string>
    <string name="movie_ranking_hk_title">香港电影票房榜</string>
    <string name="movie_ranking_w">周末票房：%1$s</string>
    <string name="movie_ranking_t">累计票房：%1$s</string>

    <string name="click_to_retry">%1$s, 点击重试</string>
    <string name="channel">频道</string>
    <string name="data_analyze_error">数据解析异常</string>
    <string name="input_text_for_convert">输入要进行转换的文字</string>
    <string name="text_convert">转换</string>
    <string name="text_traditional_chinese">繁体：</string>
    <string name="text_leetspeak">火星文：</string>
    <string name="text_copy">复制</string>
    <string name="text_copy_to_clipboard">内容已复制到剪贴板</string>

    <string name="website_security_bug">漏洞信息:</string>
    <string name="website_security_trojan">挂马信息:</string>
    <string name="website_security_fake">虚假信息:</string>
    <string name="website_security_distrot">篡改信息:</string>
    <string name="website_security_side_note">旁注信息:</string>
    <string name="website_security_score">分数信息:</string>
    <string name="website_security_violation">违规信息:</string>
    <string name="website_security_google">Google屏蔽信息:</string>
    <string name="website_security_high_bug">高危漏洞</string>
    <string name="website_security_mid_bug">严重漏洞</string>
    <string name="website_security_low_bug">警告漏洞</string>
    <string name="website_security_info_bug">提醒漏洞</string>
    <string name="website_security_bug_parse">高危漏洞:%1$s, 严重漏洞:%2$s, 警告漏洞:%3$s, 提醒漏洞:%4$s</string>
    <string name="website_security_default_result">无</string>

</resources>
