<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dip">

        <EditText
            android:id="@+id/website_input_text"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.:/"
            android:hint="@string/input_ip_or_domain" />

    </android.support.design.widget.TextInputLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <lic.swifter.box.widget.CanaroTextView
            android:id="@+id/website_security_loading_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <ProgressBar
            android:id="@+id/website_security_loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <ScrollView
            android:id="@+id/website_security_result_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <LinearLayout
                android:layout_margin="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/result_summary_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/result_summary_message_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_score"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_score_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    />
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_bug"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_bug_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    />
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_trojan"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_trojan_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    />
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_distrot"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_distrot_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    />
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_fake"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_fake_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    />
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_side_note"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_note_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    />
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_violation"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_violation_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    />
                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_security_google"
                    android:layout_margin="5dip"/>
                <lic.swifter.box.widget.CanaroTextView
                    android:id="@+id/website_security_google_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:text="@string/website_security_default_result"
                    android:layout_marginBottom="5dip"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>