<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:gravity="start|top"
            android:hint="@string/input_text_for_convert" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="5dip">

            <Button
                android:id="@+id/button_convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_convert" />

            <ProgressBar
                android:id="@+id/convert_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/traditional_result_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_traditional_chinese"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/traditional_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/text_copy" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:id="@+id/traditional_chinese_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leetspeak_result_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip">

                <lic.swifter.box.widget.CanaroTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_leetspeak"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/leetspeak_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/text_copy" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:id="@+id/leetspeak_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>